fix: catagories mismatch fix Catagories in front-end not matching the catagories defined in database. Back-end also lack the *catagories* entity, meaning that it did NOT actually used data from the database, but rather used mock data from a weird Python script *seed.py*. This update adds the correct catagory definition into *opanapi.yaml*, adds corresponding eneities, adds datalinks to transfer catagory info correctly, and fixes front-end to match the correct catagories.
